--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="ID Card">
+    <meta name="apple-mobile-web-app-title" content="Kaspi.kz">
     <link rel="apple-touch-icon" href="icon.png">
     <link rel="manifest" href="manifest.json">
     <meta charset="UTF-8">
@@ -265,3 +265,4 @@
 </body>
 
 </html>
+
