--- a/back.html
+++ b/back.html
@@ -14,7 +14,7 @@
 <body>
     <input type="file" id="pdf-upload-input" accept="application/pdf">
     <div class="header">
-        <a href="index.html" class="back-button"></a>
+        <a href="main.html" class="back-button"></a>
         <h1 class="header-title">Цифровые документы</h1>
     </div>
      <main class="content">
